Ventana Maestro Detalle con Slides sin ServicioDAO

--- a/FARMACIA/FrontVR/FrontVR.csproj
+++ b/FARMACIA/FrontVR/FrontVR.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FarmaciaWebApi\FarmaciaWebApi\FarmaciaWebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
